syntax='proto3';
package com.example.grpc;

message HelloRequest {
  int32 a = 1;
  int32 b = 2;
}

message HelloResponse {
  int32 sum = 1;
}


service CalculatorService {
  rpc simpleSum(HelloRequest) returns (HelloResponse);
  rpc repeatedSum(HelloRequest) returns (stream HelloResponse);
  rpc streamSum(stream HelloRequest) returns (stream HelloResponse);
}
